<resources>
    <string name="app_name">سند | Sanad</string>
    <string name="successfully_registered">تم التسجيل بنجاح!</string>
    <string name="successfully_logged_in">تم تسجيل الدخول بنجاح!</string>
    <string name="no_internet_title">لا يوجد اتصال بالانترنت!</string>
    <string name="no_internet_message">من فضلك تحقق من وجود اتصال بالانترنت للاستمرار في استخدام التطبيق!</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="add_blind">اضافة ذو البصيرة</string>
    <string name="on_boarding_message_1">نظارة سند تمكن ذوي البصيرة من الرؤية!</string>
    <string name="on_boarding_next">التالي</string>
    <string name="on_boarding_skip">تخطي</string>
    <string name="on_boarding_message_2">متابعة موقع ذوي البصيرة بشكل لحظي</string>
    <string name="on_boarding_message_3">اجراء المكالمات والمحادثات النصية</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="login_message">أدخل بياناتك لتسجيل الدخول</string>
    <string name="login_email_hint">بريدك الإلكتروني</string>
    <string name="login_password_hint">كلمـة المـرور</string>
    <string name="login">دخول</string>
    <string name="login_forget_password"><u>هل نسيت كلمة المرور ؟</u></string>
    <string name="login_using">أو سجل دخول باستخدام</string>
    <string name="login_facebook">سجل دخول باستخدام فيسبوك</string>
    <string name="login_google">سجل دخول باستخدام جوجل</string>
    <string name="login_no_account">لا تمتلك حساب ؟</string>
    <string name="login_register"><u>سجل الان</u></string>
    <string name="in_development">قيد التطوير!</string>
    <string name="registration_title">إنشاء حساب</string>
    <string name="registration_message">أدخل بياناتك لإنشاء حساب جديد</string>
    <string name="name">الاسم</string>
    <string name="nickname">اللقب</string>
    <string name="email">البريدك الإلكتروني</string>
    <string name="password">كلمـة المـرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="register">تسجيل</string>
    <string name="already_registered">لديك حساب بالفعل؟</string>
    <string name="registration_login"><u>تسجيل الدخول</u></string>
    <string name="profile_picture">الصورة الشخصية</string>
    <string name="profile_picture_message">قم بالتقاط او برفع صورة شخصيه لك</string>
    <string name="take_picture">التقاط صورة</string>
    <string name="pick_from_gallery">اختيار صورة من المعرض</string>
    <string name="confirmation_title">تأكيد الحساب</string>
    <string name="confirmation_message">فضلًا ادخل الرمز التأكيدي الذي قمنا بإرساله الى البريد الإلكتروني الذي قمت بإدخاله لتأكيد تفعيل الحساب الخاص بكم</string>
    <string name="confirm">تأكيد</string>
    <string name="confirmation_code_warning">من فضلك أدخل كود التفعيل كاملًا!</string>
    <string name="no_code">لم يصلك الرمز ؟</string>
    <string name="resend_confirmation"><u>الإرسال مجددًا</u></string>
    <string name="resend_confirmation_wait_message">برجاء المحاولة بعد مرور %d ثانية</string>
    <string name="resend_success_message">تم إرسال كود التفعيل بنجاح!</string>
    <string name="q_r_welcome_message">أهلاً %s</string>
    <string name="q_r_camera_permission_message">يحتاج التطبيق الى استخدام الكاميرا لمسح ال QR كود.</string>
    <string name="camera_permission_denied_message">لا يمكن الاستمرار بدون إذن استخدام الكاميرا.</string>
    <string name="q_r_message">قم بمسح رمز QR الخاص بالجهاز الخاص بكم</string>
    <string name="no_device_message">لا تمتلك جهاز ؟</string>
    <string name="add_blind_title">بيانات ذو البصيرة</string>
    <string name="add_blind_message">قم بإدخال بيانات الشخص الكفيف بشكل دقيق وسليم</string>
    <string name="pick_from_gallery_lite">اختيار من المعرض</string>
    <string name="blind_name_label">الاسم:</string>
    <string name="blind_age_label">السن:</string>
    <string name="gender">النوع:</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string name="blood_type">فصيلة الدم:</string>
    <string name="illnesses">الأمراض التي يعاني منها:</string>
    <string name="add_blind_pic_warning">من فضلك قم بإضافة صورة لذي البصيرة</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="profile">الملف الشخصي</string>
    <string name="add_blinds">إضافة أشخاص</string>
    <string name="feature_people">أشخاص</string>
    <string name="feature_gps">تعقب</string>
    <string name="feature_chat">دردشة</string>
    <string name="feature_call">اتصال</string>
    <string name="call_permission_message">مطلوب الموافقة على إذن استخدام الهاتف ﻹجراء اتصال هاتفي</string>
    <string name="call_permission_denied">لا يمكن إجراء المكالمة بدون إذن الهاتف</string>
    <string name="add_a_favorite_place">إضافة مكان إلى المفضلة</string>
    <string name="add_reminder">إضافة مذكرة</string>
    <string name="cancel">إلغاء</string>
    <string name="add">إضافة</string>
    <string name="new_location_failed">لم تكتمل عملية إضافة المكان</string>
    <string name="tour">الذهاب في جولة</string>
    <string name="location_details">تفاصيل المكان</string>
    <string name="new_location_message">قم بإضافة بعض التفاصيل الخاصة بالمكان</string>
    <string name="place_name">اسم المكان:</string>
    <string name="associated_name_label">اسم شخص مرتبط بالمكان:</string>
    <string name="associated_number_label">رقم الشخص المرتبط بالمكان:</string>
    <string name="location_details_label">تفاصيل المكان:</string>
    <string name="previous">السابق</string>
    <string name="add_person">إضافة شخص</string>
    <string name="no_known_persons_found">لم يتم العثور على أشخاص</string>
    <string name="known_persons_title">أشخاص يعرفهم</string>
    <string name="add_known_person_label">إضافة شخص يعرفه</string>
    <string name="add_person_message">قم بالتقاط او برفع صورة شخصية واضحة له</string>
    <string name="add_person_name_label">اسم الشخص:</string>
    <string name="add_blind_nickname">اللقب:</string>
    <string name="send">إرسال</string>
    <string name="message_duration">%d:%d</string>
    <string name="please_type_a_message">من فضلك قم بكتابة رسالة</string>
</resources>