<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_person_activity.AddPersonActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_add_person_name"
        style="@style/SanadInputField"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <Button
        android:id="@+id/btn_add_person_take_photo"
        style="@style/SanadGreyButton"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_camera"
        android:paddingLeft="24dp"
        android:text="@string/take_picture"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_person_name" />

    <Button
        android:id="@+id/btn_add_person_pick_from_gallery"
        style="@style/SanadGreyButton"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawableLeft="@drawable/ic_image"
        android:paddingLeft="24dp"
        android:text="@string/pick_from_gallery"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_person_take_photo" />

    <Button
        android:id="@+id/btn_add_person_done"
        style="@style/SanadSubmitButton"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:paddingRight="24dp"
        android:text="@string/on_boarding_next"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_add_person_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_person_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_add_person_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_person_pick_from_gallery"
        tools:text="Error" />

    <ProgressBar
        android:id="@+id/pb_add_person_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_person_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_add_person_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_person_take_photo" />

    <ImageView
        android:id="@+id/iv_add_person_preview"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/yellow_circle_background"
        android:padding="1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_person_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_person_pick_from_gallery"
        tools:srcCompat="@drawable/blind_connect_background" />

    <Button
        android:id="@+id/btn_add_person_previous"
        style="@style/SanadPreviousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/previous"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        style="@style/SanadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_known_person_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_person_previous" />

    <TextView
        android:id="@+id/textView29"
        style="@style/SanadRegularBlueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_person_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView30"
        style="@style/SanadAddBlindText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:text="@string/add_person_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

</androidx.constraintlayout.widget.ConstraintLayout>