<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.confirmation_activity.ConfirmationActivity">

    <Button
        android:id="@+id/btn_confirmation_submit"
        style="@style/SanadSubmitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/SanadRegularBlueText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:text="@string/confirmation_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ProgressBar
        android:id="@+id/pb_confirmation_loading_indicator"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirmation_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_confirmation_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/pb_confirmation_loading_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        style="@style/SanadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/confirmation_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintDimensionRatio="327:56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_1"
            style="@style/SanadConfirmationField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_2"
            style="@style/SanadConfirmationField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_3"
            style="@style/SanadConfirmationField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_4"
            style="@style/SanadConfirmationField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_5"
            style="@style/SanadConfirmationField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/c_6"
            style="@style/SanadConfirmationField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        style="@style/SanadRegularBlueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cairo_semi_bold"
        android:text="@string/no_code"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_confirmation_resend"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tv_confirmation_resend"
        style="@style/SanadRegularBlueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/resend_confirmation"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <TextView
        android:id="@+id/tv_confirmation_wait_time"
        style="@style/SanadRegularBlueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_confirmation_resend"
        app:layout_constraintEnd_toStartOf="@+id/tv_confirmation_resend"
        app:layout_constraintTop_toTopOf="@+id/tv_confirmation_resend" />

</androidx.constraintlayout.widget.ConstraintLayout>