<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.places_activity.PlacesActivity">

    <FrameLayout
        android:id="@+id/fr_places_maps_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/location_confirmation_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:translationY="120dp"
        android:background="@drawable/main_blind_list_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_places_deny_location"
            style="@style/SanadBottomPlacesButton"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/cancel"
            android:background="@drawable/btn_places_deny_background"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_places_confirm_location"
            style="@style/SanadBottomPlacesButton"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/btn_places_confirm_background"
            android:text="@string/add"
            app:backgroundTint="@null" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_places_bottom_view"
        android:layout_width="0dp"
        android:layout_height="156dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_places_name"
                style="@style/SanadRegularBlueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="عمر" />

            <TextView
                android:id="@+id/tv_places_battery"
                style="@style/SanadRegularBlueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/cairo_semi_bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_places_name"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/tv_places_name"
                tools:text="78%" />

            <TextView
                android:id="@+id/tv_places_is_connected"
                style="@style/SanadRegularBlueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/cairo_semi_bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_places_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_places_name"
                tools:text="متصل" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_places_is_connected"
                app:layout_constraintEnd_toStartOf="@+id/tv_places_is_connected"
                app:layout_constraintTop_toTopOf="@+id/tv_places_is_connected"
                app:srcCompat="@drawable/blind_connect_background" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_places_battery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_places_battery"
                app:srcCompat="@drawable/ic_battery" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="356:80"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_places_name">

                <Button
                    android:id="@+id/btn_places_tour"
                    style="@style/SanadBottomPlacesButton"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/btn_tour_background"
                    android:text="@string/tour"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/btn_places_add_place"
                    style="@style/SanadBottomPlacesButton"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/btn_add_place_background"
                    android:text="@string/add_a_favorite_place"
                    app:backgroundTint="@null" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_places_profile_pic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="138dp"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_person" />

    <ProgressBar
        android:id="@+id/pb_places_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_places_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_places_location_picker"
        android:layout_width="36dp"
        android:layout_height="76dp"
        android:layout_marginBottom="76dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pin" />
</androidx.constraintlayout.widget.ConstraintLayout>